Adjustment for translation of texts into Spanish, filtered by date.

--- a/ckanext/report/templates/report/option_organization.html
+++ b/ckanext/report/templates/report/option_organization.html
@@ -5,13 +5,13 @@ value - Value of this option
 default - Default value for this option
 #}
 
-<span class="form-select control-group control-organization">
-    <label for="option-organization"> {{ _('Publisher:') }} </label>
+<div class="form-select control-group control-organization">
+    <label for="option-organization"> {{ _('Publisher') }} </label>
     {% set offer_organization_index = (default == None) %}
     {% if offer_organization_index and value != None %}
-        <a href="{{ h.report__relative_url_for(organization=None) }}">Index of all publishers</a>
+        <a href="{{ h.report__relative_url_for(organization=None) }}">{{ _('Index of all publishers') }}</a>
     {% endif %}
-    <select id="option-organization" name="organization" class="inline js-auto-submit">
+    <select id="option-organization" name="organization" class="form-control inline js-auto-submit">
         {% if offer_organization_index %}
           <option value="" {% if value == None %}selected="selected"{% endif %}>-- {{ _('Index of all publishers') }} --</option>
         {% endif %}
@@ -19,4 +19,4 @@ default - Default value for this option
             <option value="{{org_name}}" {% if value == org_name %}selected="selected" {% endif %}> {{org_title}} </option>
         {% endfor %}
     </select>
-</span>
+</div>
