--- a/ckanext/report/templates/report/tagless-datasets.html
+++ b/ckanext/report/templates/report/tagless-datasets.html
@@ -12,10 +12,10 @@ data - other data values, as a dict
 <table class="table table-bordered table-condensed tablesorter" id="report-table" style="width: 100%; table-layout:fixed; margin-top: 8px;">
     <thead>
       <tr>
-        <th>Dataset</th>
-        <th>Notes</th>
-        <th>User</th>
-        <th>Created</th>
+        <th>{{ _('Dataset') }}</th>
+        <th>{{ _('Notes') }}</th>
+        <th>{{ _('User') }}</th>
+        <th>{{ _('Created') }}</th>
       </tr>
     </thead>
     <tbody>
