--- a/ckanext/report/templates/report/option_include_sub_organizations.html
+++ b/ckanext/report/templates/report/option_include_sub_organizations.html
@@ -3,9 +3,9 @@ Option snippet - organization
 
 value - Value of this option
 #}
-<span class="form-select control-group control-organization">
+<div class="form-select control-group control-organization">
     <label class="checkbox">
-      <input type="checkbox" name="include_sub_organizations" value="1" class="inline js-auto-submit" {{ 'checked=checked' if value }} />
+      <input type="checkbox" name="include_sub_organizations" value="1" class="form-control inline js-auto-submit" {{ 'checked=checked' if value }} />
       Include results from sub-publishers
     </label>
-</span>
+</div>
