--- a/ckanext/report/templates/report/view.html
+++ b/ckanext/report/templates/report/view.html
@@ -15,12 +15,12 @@
       </p>
       {% if c.userobj.sysadmin %}
       <div class="panel panel-info" style="width=700px">
-          <div class="panel-heading"><strong>Refresh report</strong></div>
+          <div class="panel-heading"><strong>{{ _('Refresh report') }}</strong></div>
           <div class="panel-body">
             <form action="" method="POST">
               <input type="submit" value="Refresh" class="btn btn-info pull-right" style="margin-left: 15px"/>
             </form>
-            <p>{{ _('As a system administrator you are able to refresh this report on demand by clicking the \'Refresh\' button.') }}</p>
+            <p>{{ _('As a system administrator you are able to refresh this report on demand by clicking the Refresh button.') }}</p>
           </div>
       </div>
       {% endif %}
@@ -48,6 +48,7 @@
         </div>
       {% endif %}
       <h3>{{ _('Results') }}</h3>
+      <span id="infoContent">Total: {{ data['table']|length }}</span>
       {% if not are_some_results %}
         <p>{{ _('No results found.') }}</p>
       {% else %}
@@ -58,9 +59,14 @@
   </div>
 {% endblock%}
 
+{% block styles %}
+  {{ super() }}
+  {% resource 'report/css/datatables.css' %}
+{% endblock %}
+
 {% block scripts %}
     {{ super() }}
-    {% resource 'report/javascript/jquery.tablesorter.js' %}
+    {% resource 'report/javascript/datatables.js' %}
     {% resource 'report/javascript/report.js' %}
 
 {% endblock%}
